@@ -1,7 +1,6 @@
 package com.tasteam.domain.review.service;
 
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -9,7 +8,11 @@ import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.tasteam.domain.file.repository.ImageRepository;
+import com.tasteam.domain.file.dto.response.DomainImageItem;
+import com.tasteam.domain.file.entity.DomainType;
+import com.tasteam.domain.file.repository.DomainImageRepository;
+import com.tasteam.domain.file.service.DomainImageLinker;
+import com.tasteam.domain.file.service.FileService;
 import com.tasteam.domain.group.repository.GroupRepository;
 import com.tasteam.domain.member.dto.response.ReviewSummaryResponse;
 import com.tasteam.domain.member.repository.MemberRepository;
@@ -28,14 +31,11 @@ import com.tasteam.domain.review.dto.response.ReviewKeywordItemResponse;
 import com.tasteam.domain.review.entity.Keyword;
 import com.tasteam.domain.review.entity.KeywordType;
 import com.tasteam.domain.review.entity.Review;
-import com.tasteam.domain.review.entity.ReviewImage;
 import com.tasteam.domain.review.entity.ReviewKeyword;
 import com.tasteam.domain.review.repository.KeywordRepository;
-import com.tasteam.domain.review.repository.ReviewImageRepository;
 import com.tasteam.domain.review.repository.ReviewKeywordRepository;
 import com.tasteam.domain.review.repository.ReviewQueryRepository;
 import com.tasteam.domain.review.repository.ReviewRepository;
-import com.tasteam.domain.review.repository.projection.ReviewImageProjection;
 import com.tasteam.domain.review.repository.projection.ReviewKeywordProjection;
 import com.tasteam.domain.subgroup.repository.SubgroupRepository;
 import com.tasteam.domain.subgroup.type.SubgroupStatus;
@@ -47,6 +47,7 @@ import com.tasteam.global.exception.code.RestaurantErrorCode;
 import com.tasteam.global.exception.code.ReviewErrorCode;
 import com.tasteam.global.exception.code.SubgroupErrorCode;
 import com.tasteam.global.utils.CursorCodec;
+import com.tasteam.global.utils.CursorPageBuilder;
 
 import lombok.RequiredArgsConstructor;
 
@@ -65,9 +66,10 @@ public class ReviewService {
 	private final KeywordRepository keywordRepository;
 	private final ReviewQueryRepository reviewQueryRepository;
 	private final ReviewKeywordRepository reviewKeywordRepository;
-	private final ReviewImageRepository reviewImageRepository;
-	private final ImageRepository imageRepository;
+	private final DomainImageRepository domainImageRepository;
+	private final FileService fileService;
 	private final CursorCodec cursorCodec;
+	private final DomainImageLinker domainImageLinker;
 
 	@Transactional(readOnly = true)
 	public List<ReviewKeywordItemResponse> getReviewKeywords(KeywordType type) {
@@ -91,12 +93,14 @@ public class ReviewService {
 			.map(ReviewKeywordProjection::getKeywordName)
 			.toList();
 
-		List<ReviewDetailResponse.ReviewImageResponse> images = reviewImageRepository
-			.findReviewImages(List.of(reviewId))
+		Map<Long, List<DomainImageItem>> reviewImages = fileService.getDomainImageUrls(
+			DomainType.REVIEW,
+			List.of(reviewId));
+
+		List<ReviewDetailResponse.ReviewImageResponse> images = reviewImages
+			.getOrDefault(reviewId, List.of())
 			.stream()
-			.map(image -> new ReviewDetailResponse.ReviewImageResponse(
-				image.getImageId(),
-				image.getImageUrl()))
+			.map(image -> new ReviewDetailResponse.ReviewImageResponse(image.imageId(), image.url()))
 			.toList();
 
 		return new ReviewDetailResponse(
@@ -150,13 +154,7 @@ public class ReviewService {
 		reviewKeywordRepository.saveAll(mappings);
 
 		if (request.imageIds() != null && !request.imageIds().isEmpty()) {
-			List<ReviewImage> images = new ArrayList<>();
-			for (int index = 0; index < request.imageIds().size(); index++) {
-				imageRepository.findByFileUuid(request.imageIds().get(index))
-					// TODO: storage key -> url 변환 필요
-					.ifPresent(image -> images.add(ReviewImage.create(review, image.getStorageKey())));
-			}
-			reviewImageRepository.saveAll(images);
+			domainImageLinker.linkImages(DomainType.REVIEW, review.getId(), request.imageIds());
 		}
 
 		return new ReviewCreateResponse(
@@ -172,16 +170,10 @@ public class ReviewService {
 			throw new BusinessException(CommonErrorCode.NO_PERMISSION);
 		}
 
-		// 리뷰 키워드 물리 삭제
 		Instant now = Instant.now();
 		review.softDelete(now);
 		reviewKeywordRepository.deleteByReview_Id(reviewId);
-
-		// 리뷰 이미지 소프트 삭제
-		List<ReviewImage> images = reviewImageRepository.findByReview_IdAndDeletedAtIsNull(reviewId);
-		for (ReviewImage image : images) {
-			image.softDelete(now);
-		}
+		domainImageRepository.deleteAllByDomainTypeAndDomainId(DomainType.REVIEW, reviewId);
 	}
 
 	@Transactional(readOnly = true)
@@ -194,15 +186,15 @@ public class ReviewService {
 		}
 
 		int resolvedSize = resolveSize(request.size());
-		ReviewCursor cursor = parseCursor(request.cursor());
+		CursorPageBuilder<ReviewCursor> pageBuilder = buildCursorPageBuilderOrThrow(request.cursor());
 
 		// 리뷰 목록
 		List<ReviewQueryDto> reviewList = reviewQueryRepository.findRestaurantReviews(
 			restaurantId,
-			cursor,
-			resolvedSize + 1);
+			pageBuilder.cursor(),
+			CursorPageBuilder.fetchSize(resolvedSize));
 
-		return buildReviewPage(reviewList, resolvedSize);
+		return buildReviewPage(pageBuilder, reviewList, resolvedSize);
 	}
 
 	@Transactional(readOnly = true)
@@ -213,14 +205,14 @@ public class ReviewService {
 			.orElseThrow(() -> new BusinessException(GroupErrorCode.GROUP_NOT_FOUND));
 
 		int resolvedSize = resolveSize(request.size());
-		ReviewCursor parsedCursor = parseCursor(request.cursor());
+		CursorPageBuilder<ReviewCursor> pageBuilder = buildCursorPageBuilderOrThrow(request.cursor());
 
 		List<ReviewQueryDto> reviewList = reviewQueryRepository.findGroupReviews(
 			groupId,
-			parsedCursor,
-			resolvedSize + 1);
+			pageBuilder.cursor(),
+			CursorPageBuilder.fetchSize(resolvedSize));
 
-		return buildReviewPage(reviewList, resolvedSize);
+		return buildReviewPage(pageBuilder, reviewList, resolvedSize);
 	}
 
 	@Transactional(readOnly = true)
@@ -232,14 +224,14 @@ public class ReviewService {
 		}
 
 		int resolvedSize = resolveSize(request.size());
-		ReviewCursor parsedCursor = parseCursor(request.cursor());
+		CursorPageBuilder<ReviewCursor> pageBuilder = buildCursorPageBuilderOrThrow(request.cursor());
 
 		List<ReviewQueryDto> reviewList = reviewQueryRepository.findSubgroupReviews(
 			subgroupId,
-			parsedCursor,
-			resolvedSize + 1);
+			pageBuilder.cursor(),
+			CursorPageBuilder.fetchSize(resolvedSize));
 
-		return buildReviewPage(reviewList, resolvedSize);
+		return buildReviewPage(pageBuilder, reviewList, resolvedSize);
 	}
 
 	@Transactional(readOnly = true)
@@ -249,19 +241,19 @@ public class ReviewService {
 		memberRepository.findByIdAndDeletedAtIsNull(memberId)
 			.orElseThrow(() -> new BusinessException(MemberErrorCode.MEMBER_NOT_FOUND));
 
-		ReviewCursor parsedCursor = parseCursor(request.cursor());
 		int resolvedSize = resolveSize(request.size());
+		CursorPageBuilder<ReviewCursor> pageBuilder = buildCursorPageBuilderOrThrow(request.cursor());
 
 		List<ReviewMemberQueryDto> reviewList = reviewQueryRepository.findMemberReviews(
 			memberId,
-			parsedCursor,
-			resolvedSize + 1);
+			pageBuilder.cursor(),
+			CursorPageBuilder.fetchSize(resolvedSize));
 
 		if (reviewList.isEmpty()) {
 			return CursorPageResponse.empty();
 		}
 
-		return buildReviewSummaryPage(reviewList, resolvedSize);
+		return buildReviewSummaryPage(pageBuilder, reviewList, resolvedSize);
 	}
 
 	private int resolveSize(Integer size) {
@@ -274,49 +266,43 @@ public class ReviewService {
 		return size;
 	}
 
-	private ReviewCursor parseCursor(String cursor) {
-		if (cursor == null || cursor.isBlank()) {
-			return null;
+	private CursorPageBuilder<ReviewCursor> buildCursorPageBuilderOrThrow(String rawCursor) {
+		CursorPageBuilder<ReviewCursor> pageBuilder = CursorPageBuilder.of(cursorCodec, rawCursor, ReviewCursor.class);
+		if (pageBuilder.isInvalid()) {
+			throw new BusinessException(CommonErrorCode.INVALID_REQUEST);
 		}
-		return cursorCodec.decode(cursor, ReviewCursor.class);
+		return pageBuilder;
 	}
 
 	private CursorPageResponse<ReviewResponse> buildReviewPage(
+		CursorPageBuilder<ReviewCursor> pageBuilder,
 		List<ReviewQueryDto> reviewList,
 		int resolvedSize) {
-		if (reviewList.isEmpty()) {
+		CursorPageBuilder.Page<ReviewQueryDto> page = pageBuilder.build(
+			reviewList,
+			resolvedSize,
+			last -> new ReviewCursor(last.createdAt(), last.reviewId()));
+
+		if (page.items().isEmpty()) {
 			return CursorPageResponse.empty();
 		}
 
-		boolean hasNext = reviewList.size() > resolvedSize;
-		List<ReviewQueryDto> pageContent = sliceContent(reviewList, resolvedSize);
-		String nextCursor = buildNextCursor(pageContent, hasNext);
-
-		List<Long> reviewIds = extractReviewIds(pageContent);
+		List<Long> reviewIds = extractReviewIds(page.items());
 		Map<Long, List<String>> reviewKeywords = loadReviewKeywords(reviewIds);
-		Map<Long, ReviewResponse.ReviewImageResponse> reviewThumbnails = loadReviewThumbnails(reviewIds);
+		Map<Long, List<DomainImageItem>> reviewThumbnails = fileService.getDomainImageUrls(
+			DomainType.REVIEW,
+			reviewIds);
+		Map<Long, String> restaurantIdToFirstImageUrl = resolveRestaurantFirstImageUrls(page.items());
 
-		List<ReviewResponse> items = buildReviewResponses(pageContent, reviewKeywords, reviewThumbnails);
+		List<ReviewResponse> items = buildReviewResponses(
+			page.items(), reviewKeywords, reviewThumbnails, restaurantIdToFirstImageUrl);
 
 		return new CursorPageResponse<>(
 			items,
 			new CursorPageResponse.Pagination(
-				nextCursor,
-				hasNext,
+				page.nextCursor(),
+				page.hasNext(),
 				items.size()));
-	}
-
-	private List<ReviewQueryDto> sliceContent(List<ReviewQueryDto> reviewList, int resolvedSize) {
-		boolean hasNext = reviewList.size() > resolvedSize;
-		return hasNext ? reviewList.subList(0, resolvedSize) : reviewList;
-	}
-
-	private String buildNextCursor(List<ReviewQueryDto> pageContent, boolean hasNext) {
-		if (!hasNext) {
-			return null;
-		}
-		ReviewQueryDto last = pageContent.get(pageContent.size() - 1);
-		return cursorCodec.encode(new ReviewCursor(last.createdAt(), last.reviewId()));
 	}
 
 	private List<Long> extractReviewIds(List<ReviewQueryDto> pageContent) {
@@ -325,49 +311,63 @@ public class ReviewService {
 			.toList();
 	}
 
+	private Map<Long, String> resolveRestaurantFirstImageUrls(List<ReviewQueryDto> pageContent) {
+		List<Long> restaurantIds = pageContent.stream()
+			.map(ReviewQueryDto::restaurantId)
+			.filter(id -> id != null)
+			.distinct()
+			.toList();
+		if (restaurantIds.isEmpty()) {
+			return Map.of();
+		}
+		Map<Long, List<DomainImageItem>> byRestaurant = fileService.getDomainImageUrls(DomainType.RESTAURANT,
+			restaurantIds);
+		return byRestaurant.entrySet().stream()
+			.filter(e -> e.getValue() != null && !e.getValue().isEmpty())
+			.collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue().getFirst().url()));
+	}
+
 	private List<ReviewResponse> buildReviewResponses(
 		List<ReviewQueryDto> pageContent,
 		Map<Long, List<String>> reviewKeywords,
-		Map<Long, ReviewResponse.ReviewImageResponse> reviewThumbnails) {
+		Map<Long, List<DomainImageItem>> reviewThumbnails,
+		Map<Long, String> restaurantIdToFirstImageUrl) {
 		return pageContent.stream()
 			.map(review -> new ReviewResponse(
 				review.reviewId(),
+				review.groupId(),
+				review.subgroupId(),
+				review.groupName(),
+				review.subgroupName(),
 				new ReviewResponse.AuthorResponse(review.memberName()),
 				review.content(),
 				review.isRecommended(),
 				reviewKeywords.getOrDefault(review.reviewId(), List.of()),
-				reviewThumbnails.get(review.reviewId()),
-				review.createdAt()))
+				convertToReviewImages(reviewThumbnails.get(review.reviewId())),
+				review.createdAt(),
+				review.restaurantId(),
+				review.restaurantName(),
+				review.groupLogoImageUrl(),
+				review.groupAddress(),
+				review.restaurantId() != null ? restaurantIdToFirstImageUrl.get(review.restaurantId()) : null,
+				review.restaurantAddress()))
 			.toList();
 	}
 
 	private CursorPageResponse<ReviewSummaryResponse> buildReviewSummaryPage(
+		CursorPageBuilder<ReviewCursor> pageBuilder,
 		List<ReviewMemberQueryDto> reviewList,
 		int resolvedSize) {
-		boolean hasNext = reviewList.size() > resolvedSize;
-		List<ReviewMemberQueryDto> pageContent = sliceMemberContent(reviewList, resolvedSize);
-		String nextCursor = buildMemberNextCursor(pageContent, hasNext);
+		CursorPageBuilder.Page<ReviewMemberQueryDto> page = pageBuilder.build(
+			reviewList,
+			resolvedSize,
+			last -> new ReviewCursor(last.createdAt(), last.reviewId()));
 
-		List<ReviewSummaryResponse> items = buildReviewSummaryResponses(pageContent);
+		List<ReviewSummaryResponse> items = buildReviewSummaryResponses(page.items());
 
 		return new CursorPageResponse<>(
 			items,
-			buildMemberPagination(nextCursor, hasNext, items.size()));
-	}
-
-	private List<ReviewMemberQueryDto> sliceMemberContent(
-		List<ReviewMemberQueryDto> reviewList,
-		int resolvedSize) {
-		boolean hasNext = reviewList.size() > resolvedSize;
-		return hasNext ? reviewList.subList(0, resolvedSize) : reviewList;
-	}
-
-	private String buildMemberNextCursor(List<ReviewMemberQueryDto> pageContent, boolean hasNext) {
-		if (!hasNext) {
-			return null;
-		}
-		ReviewMemberQueryDto last = pageContent.get(pageContent.size() - 1);
-		return cursorCodec.encode(new ReviewCursor(last.createdAt(), last.reviewId()));
+			buildMemberPagination(page.nextCursor(), page.hasNext(), items.size()));
 	}
 
 	private List<ReviewSummaryResponse> buildReviewSummaryResponses(List<ReviewMemberQueryDto> pageContent) {
@@ -393,17 +393,12 @@ public class ReviewService {
 				Collectors.mapping(ReviewKeywordProjection::getKeywordName, Collectors.toList())));
 	}
 
-	private Map<Long, ReviewResponse.ReviewImageResponse> loadReviewThumbnails(List<Long> reviewIds) {
-		return reviewImageRepository
-			.findReviewImages(reviewIds)
-			.stream()
-			.collect(Collectors.groupingBy(
-				ReviewImageProjection::getReviewId,
-				Collectors.collectingAndThen(
-					Collectors.toList(),
-					images -> {
-						ReviewImageProjection first = images.get(0);
-						return new ReviewResponse.ReviewImageResponse(first.getImageId(), first.getImageUrl());
-					})));
+	private List<ReviewResponse.ReviewImageResponse> convertToReviewImages(List<DomainImageItem> images) {
+		if (images == null || images.isEmpty()) {
+			return List.of();
+		}
+		return images.stream()
+			.map(image -> new ReviewResponse.ReviewImageResponse(image.imageId(), image.url()))
+			.toList();
 	}
 }
